# rag-starter

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  Taskfile.yml  docker-compose.yml
src/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/api/local-dev/requests/: health.http  query-basic.http  query-high-top-k.http  query-minimal.http
src/api/local-dev/scripts/: populate-test-data.py  test-query.sh
src/api/rag_api/: audit_sanitize.py  bedrock.py  config.py  dependencies.py  main.py  models.py  prompts.py  qdrant_client.py  rate_limiter.py
src/api/rag_api/exceptions/: __init__.py  handlers.py
src/api/rag_api/middleware/: __init__.py  audit_logging.py  correlation.py  rate_limiting.py
src/api/rag_api/providers/: __init__.py  base.py  bedrock.py
src/api/rag_api/rag/: __init__.py  context_builder.py  llm.py  orchestration.py  parsers.py  postprocessors.py  preprocessors.py  prompt_registry.py  retrieval.py  retrieval_strategies.py
src/api/rag_api/routers/: collections.py  core.py  documents.py  utilities.py
src/api/rag_api/services/: feedback_service.py  ingestion.py  metrics.py  reindex.py
src/api/tests/: README.md  conftest.py
src/api/tests/efficiency/: README.md  __init__.py  cli.py  conftest.py  reporter.py  test_performance.py  test_rag_quality.py
src/api/tests/integration/: local_support.py  test_api_contract.py  test_audit_logging.py  test_collection_routes.py  test_concurrency.py  test_core_rag_flows.py  test_core_routes.py  test_data_integrity.py  test_document_routes.py  test_endpoint_inventory.py  test_error_handling.py  test_feedback_endpoints.py  test_health.py  test_rate_limiting.py  test_utility_routes.py
src/api/tests/unit/: __init__.py  test_audit_sanitize.py  test_bedrock_provider.py  test_chunking.py  test_correlation.py  test_feedback_service.py  test_gap_api_modules.py  test_log_config_emf.py  test_metrics.py  test_models.py  test_rag_orchestration_extensibility.py  test_rag_postprocessors.py  test_rag_preprocessors.py  test_rag_prompt_and_parsers.py  test_rag_retrieval.py  test_rag_retrieval_strategies.py  test_rate_limiter.py  test_reindex_service.py  test_retry.py  test_shared_missing_modules.py
src/ingestion/: README.md  pyproject.toml
src/ingestion/lambda_handler/: exceptions.py  handler.py  models.py
src/ingestion/lambda_handler/clients/: aws_clients.py  bedrock.py  qdrant_client.py
src/ingestion/lambda_handler/config/: config.py
src/ingestion/lambda_handler/core/: orchestration.py
src/ingestion/lambda_handler/events/: event_processing.py
src/ingestion/local-dev/: env.json  template.yaml
src/ingestion/tests/: README.md
src/ingestion/tests/fixtures/: large.txt  (+7 more)
src/shared/: README.md  pyproject.toml
src/shared/shared/: __init__.py  bedrock_utils.py  chunking.py  correlation.py  id_generation.py  log_config.py  metadata.py  qdrant_utils.py  retry.py
(+74 files in other folders)
