[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "prometheus-client>=0.20.0",
  "boto3>=1.34",
  "qdrant-client>=1.9",
  "python-json-logger>=2.0",
  "boto3-stubs[dynamodb]>=1.34.0",
  "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "httpx>=0.24.0",
  "moto>=4.0.0",
  "boto3-stubs[dynamodb]>=1.34.0",
]
efficiency = [
  "deepeval>=1.0.0",
  "httpx>=0.24.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
  "health: infrastructure health and dependency checks",
  "rate_limit: rate limiting middleware checks",
  "audit: audit logging middleware checks",
  "inventory: endpoint inventory and full-route smoke checks",
  "efficiency: performance and quality efficiency checks",
]
