[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-lambda"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.2.0",
  "python-docx>=1.1.0",
  "debugpy>=1.8.0",
  "qdrant-client>=1.7.0",
  "numpy>=1.23.2,<2.3",  # Constrain to version with Lambda-compatible binary wheels
  "pandas>=2.0.0,<2.3",  # CSV and Excel parsing
  "openpyxl>=3.1.0",  # Required by pandas for Excel .xlsx files
  "xlrd>=2.0.1",  # Required by pandas for legacy Excel .xls files
  "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[project.optional-dependencies]
dev = [
  "boto3>=1.34",
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "pytest-timeout>=2.0.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "slow: Slow tests that take >30 seconds",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
