[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for RAG services"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
